added comments, cleaned up code, and deleted files not needed

--- a/assets/search.css
+++ b/assets/search.css
@@ -1,4 +1,11 @@
+
+/* Provides background styling when nothing has been searched */
 main {
     background: linear-gradient(to right, blueviolet,rgb(196, 146, 242));
+    height: 20rem;
+    /* padding-top: 6rem;
+    padding-bottom: 6rem;
+    padding-left: 2rem;
+    padding-right: 2rem; */
 }
 
